--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -11,15 +11,30 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp" />
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:orientation="horizontal"
+        android:background="@color/colorProfileBackground"
+        android:layout_height="120dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
-    <ImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="117dp"
-        android:layout_height="106dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="564dp" />
+        <ImageView
+            android:id="@+id/profileImageView"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/circle_shape"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/icon_account"
+            />
+
+    </RelativeLayout>
+
+
 
 
 
