--- a/app/src/main/res/layout/activity_user_profile_org.xml
+++ b/app/src/main/res/layout/activity_user_profile_org.xml
@@ -4,37 +4,69 @@
     android:background="@drawable/gradient_background">
 
 
-    <include
-        layout="@layout/bottom_navigation_organ"
+
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:orientation="horizontal"
+        android:background="@color/colorProfileBackground"
+        android:layout_height="120dp"/>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp" />
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/profileImageView"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/profile_background_border"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/icon_account"
+            />
+
+    </RelativeLayout>
 
 
-    <ImageView
-        android:id="@+id/profileImageView"
-        android:layout_width="117dp"
-        android:layout_height="106dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="564dp" />
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/name_org"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:textColor="@color/black"
+            android:gravity="center_horizontal"
+            android:text="User Name"
+            android:textSize="28sp"
+            />
 
-    <TextView
-        android:id="@+id/userNameTextView"
-        android:layout_width="185dp"
-        android:layout_height="150dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="356dp"
-        android:layout_marginEnd="105dp"
-        android:gravity="center_horizontal"
-        android:text="User Name"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/email_org"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:textColor="@color/gray"
+            android:gravity="center_horizontal"
+            android:text="Email"
+            android:textSize="15sp"
+            />
+
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -53,6 +85,11 @@
 
     </RelativeLayout>
 
+    <include
+        layout="@layout/bottom_navigation_organ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 
 
