--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -1,62 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
     android:background="@drawable/gradient_background">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:orientation="vertical">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/image_view_pager"
-        android:layout_width="287dp"
-        android:layout_height="209dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="66dp" />
-
-
-
+    <!---EditText: input post title-->
     <EditText
-        android:id="@+id/caption_edit_text"
+        android:id = "@+id/pTitleEt"
+        android:background=""
+        android:padding="10dp"
+        android:hint="Enter title"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!---ImageView: Input post image-->
+    <ImageView
+        android:id="@+id/pImageIv"
+        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="328dp"
-        android:layout_marginEnd="-7dp"
-        android:hint="Enter caption"
-        android:maxLines="3"
-        android:padding="12dp" />
+        android:minHeight="200dp"/>
 
-    <ImageButton
-        android:id="@+id/select_image_button"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="387dp"
-        android:layout_marginEnd="160dp"
-        android:background="@android:color/transparent"
-        android:padding="16dp"
-        android:src="@drawable/ic_select_image" />
+    <!---EditText: Input post description-->
+    <EditText
+        android:id = "@+id/pDescriptionEt"
+        android:background=""
+        android:padding="10dp"
+        android:hint="Enter title"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
+    <!---Button: publish post to firebase-->
     <Button
-        android:id="@+id/upload_button"
+        android:id="@+id/pUploadBtn"
+        android:text="Upload"
+        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="502dp"
-        android:layout_marginEnd="124dp"
-        android:text="Upload Post" />
+        />
 
 
+
+
+</LinearLayout>
     <include
         layout="@layout/bottom_navigation_organ"
         android:layout_width="match_parent"
@@ -64,6 +61,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="1dp" />
 
-</RelativeLayout>
+</ScrollView>
 
 
