--- a/app/src/main/res/layout/activity_home_org.xml
+++ b/app/src/main/res/layout/activity_home_org.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background">
 
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <!-- Header layout -->
     <LinearLayout
         android:id="@+id/header_layout"
@@ -12,7 +17,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#EEEEEE"
-        android:padding="16dp"
         android:textColor="#000000"
         android:elevation="4dp"
         android:layout_marginTop="8dp"
@@ -22,14 +26,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/header_text"
-            android:layout_width="wrap_content"
+
+        <include
+            layout="@layout/post_design"
             android:layout_height="wrap_content"
-            android:text="Home"
-            android:textSize="24sp" />
+            />
+
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+        <include
+            layout="@layout/post_design"
+            android:layout_height="wrap_content"
+            />
+
 
     </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 
