--- a/app/src/main/res/layout/bottom_navigation_activist.xml
+++ b/app/src/main/res/layout/bottom_navigation_activist.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="5"
+    android:elevation="7dp"
     android:orientation="vertical">
 
     <!-- Content layout -->
