--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -1,60 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true">
+    tools:context=".homepage.homeorganization.AddEventOrgActivity">
 
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="2dp"
-    android:orientation="vertical">
-
-    <!---EditText: input post title-->
-    <EditText
-        android:id = "@+id/pTitleEt"
-        android:padding="10dp"
-        android:hint="Enter title"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <!---ImageView: Input post image-->
-    <ImageView
-        android:id="@+id/pImageIv"
-        android:background="@color/colorPrimary"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="200dp"/>
+        android:layout_margin="2dp"
+        android:orientation="vertical">
 
-    <!---EditText: Input post description-->
-    <EditText
-        android:id = "@+id/pDescriptionEt"
-        android:padding="10dp"
-        android:hint="Enter title"
-        android:singleLine="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <!---EditText: input post title-->
+        <EditText
+            android:id = "@+id/pTitleEt"
+            android:padding="20dp"
+            android:hint="Enter title"
+            android:singleLine="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <!---Button: publish post to firebase-->
-    <Button
-        android:id="@+id/pUploadBtn"
-        android:text="Upload"
-        android:layout_gravity="end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <!---ImageView: Input post image-->
+        <ImageView
+            android:id="@+id/pImageIv"
+            android:layout_width="match_parent"
+            android:layout_height="408dp"
+            android:background="@color/colorPrimary"
+            android:minHeight="200dp" />
 
-</LinearLayout>
-    <include
-        layout="@layout/bottom_navigation_organ"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <!---EditText: Input post description-->
+        <EditText
+            android:id = "@+id/pDescriptionEt"
+            android:padding="10dp"
+            android:hint="Enter title"
+            android:inputType="textCapSentences|textMultiLine"
+            android:minHeight="120dp"
+            android:gravity="start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+        <!---Button: publish post to firebase-->
+        <Button
+            android:id="@+id/pUploadBtn"
+            android:text="Upload"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+    </LinearLayout>
+    <!---
+        <include
+            layout="@layout/bottom_navigation_organ"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"  /> -->
+    </ScrollView>
 
 
