--- a/app/src/main/res/drawable/customborder.xml
+++ b/app/src/main/res/drawable/customborder.xml
@@ -9,9 +9,9 @@
 </item>
 <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android"  android:shape="rectangle" >
-        <corners android:topRightRadius="20dp" android:topLeftRadius="20dp"/>
+        <corners android:topRightRadius="21dp" android:topLeftRadius="10dp"/>
         <padding android:left="10dp" android:right="10dp" android:top="10dp" android:bottom="10dp"/>
-        <stroke android:width="3dp" android:color="#FBD400"/>
+        <stroke android:width="1dp" android:color="#888888"/>
     </shape>
 </item>
 
