--- a/app/src/main/res/layout/activity_campaign_analytics_org.xml
+++ b/app/src/main/res/layout/activity_campaign_analytics_org.xml
@@ -4,26 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:text="Campaign Analytics"
+            android:layout_width="match_parent"
+            android:textSize="27sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="80dp"
         android:gravity="center">
-        <TextView
-            android:id="@+id/name_org"
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:textColor="@color/black"
-            android:gravity="center_horizontal"
-            android:text="Campaign Analysis Page"
-            android:textSize="28sp"
-            />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            app:srcCompat="@drawable/analysis" />
+
 
 
 
     </RelativeLayout>
-
-
-
-
 </RelativeLayout>
+
+
+
