--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -12,6 +12,13 @@
         android:layout_margin="2dp"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/pIsEventBtn"
+            android:text="An Event"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
         <!---EditText: input post title-->
         <EditText
             android:id = "@+id/pTitleEt"
@@ -28,6 +35,47 @@
             android:layout_height="408dp"
             android:background="@color/colorPrimary"
             android:minHeight="200dp" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:orientation="horizontal">
+        <!--Time And Location ET -->
+
+        <Button
+            android:id="@+id/pLocationBtn"
+            android:text="Add Location"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight = "1"/>
+
+
+        <EditText
+            android:id = "@+id/pTimeEt"
+            android:padding="10dp"
+            android:hint="Enter title"
+            android:inputType="textCapSentences|textMultiLine"
+            android:minHeight="50dp"
+            android:gravity="start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight = "1"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/locationTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pLocationBtn"
+            android:layout_marginTop="8dp"
+            android:text="Location: "
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
 
         <!---EditText: Input post description-->
         <EditText
