--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -19,10 +19,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_vertical">
-            <androidx.constraintlayout.helper.widget.CircularFlow
-                android:id="@+id/uPictureIv"
+            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
+             android:id="@+id/uPictureIv"
                 android:scaleType="center"
-                android:src="@drawable/icon_account"
+                android:src="@drawable/ic_default_img"
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
 
@@ -40,15 +40,75 @@
                     android:textColor="@color/Black"
                     android:textSize="20sp" />
 
-            </LinearLayout>
+                <TextView
+                    android:id="@+id/uTimeTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="33 min"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/uTimeTv"
+            </LinearLayout>
+                <ImageButton
+                    android:id="@+id/moreBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_more_img"/>
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/pTitleTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textColor="@color/Black"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/pDescriptionTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="The description of the post"
+            android:textColor="@color/Black"/>
+        <ImageView
+            android:id="@+id/pImageIv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/white"/>
+
+        <TextView
+            android:id="@+id/pLikesTv"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="1.2 Likes"
+            android:background="@color/white"/>
+        
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/primaryDarkColor"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="33 min"
-                android:textColor="@color/Black"
-                android:textSize="20sp" />
+                android:layout_weight = "1"
+                android:text = "LIKE"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight = "1"
+                android:text = "LIKE"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight = "1"
+                android:text = "LIKE"/>
         </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
