--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -11,13 +11,6 @@
         android:layout_height="match_parent"
         tools:context=".homepage.homeorganization.ChooseLocationActivity" />
 
-
-    <Button
-        android:id="@+id/confirmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Location" />
-
     <LinearLayout
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
@@ -25,19 +18,15 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <AutoCompleteTextView
-            android:id="@+id/placeAutoCompleteTextView"
+        <EditText
+            android:id="@+id/locationBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search for a place"
-            />
+            android:hint="Search location"
+            android:inputType="text"
+            android:maxLines="1"
+            android:singleLine="true" />
 
-        <Button
-            android:id="@+id/searchButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"
-        />
 
     </LinearLayout>
 
