--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -11,6 +11,13 @@
         android:layout_height="match_parent"
         tools:context=".homepage.homeorganization.ChooseLocationActivity" />
 
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirm Location" />
+
     <LinearLayout
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
@@ -18,15 +25,19 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <EditText
-            android:id="@+id/locationBtn"
+        <AutoCompleteTextView
+            android:id="@+id/placeAutoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search location"
-            android:inputType="text"
-            android:maxLines="1"
-            android:singleLine="true" />
+            android:hint="Search for a place"
+            />
 
+        <Button
+            android:id="@+id/searchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+        />
 
     </LinearLayout>
 
