--- a/app/src/main/res/layout/activity_audience_analysis_org.xml
+++ b/app/src/main/res/layout/activity_audience_analysis_org.xml
@@ -23,7 +23,9 @@
 
 
 
-    <!--<RelativeLayout
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -34,12 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@drawable/analysis" />
+            app:srcCompat="@drawable/audience_analysis" />
 
 
 
 
-    </RelativeLayout>-->
+    </RelativeLayout>
 </RelativeLayout>
 
 
