--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,8 @@
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/postRecyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:layout_marginBottom="70dp"/>
 
 
 
