--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -56,7 +56,7 @@
                 android:layout_marginLeft="150px"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Women Rights" />
+                android:text="Women's Rights" />
         </LinearLayout>
 
         <LinearLayout
@@ -108,7 +108,7 @@
                 android:layout_marginLeft="150px"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Click me" />
+                android:text="LGBTQ+" />
         </LinearLayout>
 
         <LinearLayout
@@ -124,7 +124,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Click me" />
+                android:text="Animals" />
 
             <Button
                 android:id="@+id/my_button7"
@@ -134,7 +134,7 @@
                 android:layout_marginLeft="150px"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Click me" />
+                android:text="Volunteering" />
         </LinearLayout>
 
         <LinearLayout
@@ -150,7 +150,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Click me" />
+                android:text="Education" />
 
             <Button
                 android:id="@+id/my_button9"
@@ -160,7 +160,7 @@
                 android:layout_marginLeft="150px"
                 android:backgroundTint="@color/gray"
                 android:onClick="onButtonClick"
-                android:text="Click me" />
+                android:text="Racism" />
         </LinearLayout>
 
         <LinearLayout
