--- a/app/src/main/res/layout/bottom_navigation_organ.xml
+++ b/app/src/main/res/layout/bottom_navigation_organ.xml
@@ -27,6 +27,18 @@
             android:padding="10dp"
             />
 
+        <ImageButton
+        android:id="@+id/nav_search"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_weight="0.7"
+        android:src="@drawable/icon_search"
+        android:scaleType="centerInside"
+        android:onClick="onNavProfileClick"
+        android:padding="10dp"
+        android:background="@null"
+        />
+
 
         <ImageButton
             android:id="@+id/nav_addPost"
@@ -66,6 +78,8 @@
             android:padding="10dp"
             android:background="@null"
             />
+
+
 
 
     </LinearLayout>
