--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightGrayWatan">#E9E9E9</color>
     <color name="red">#FF0000</color>
     <color name="dark_red">#800000</color>
     <color name="green">#00FF00</color>
