--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -5,7 +5,8 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homepage.homeorganization.MapsFragment" >
+    tools:context=".homepage.homeorganization.MapsFragment"
+    tools:layout="@layout/activity_choose_location">
 
     <Button
         android:id="@+id/confirmButton"
