--- a/app/src/main/res/layout/activity_choose_location.xml
+++ b/app/src/main/res/layout/activity_choose_location.xml
@@ -6,7 +6,7 @@
 
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_container"
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
