--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -12,13 +12,6 @@
         android:layout_margin="2dp"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/pIsEventBtn"
-            android:text="An Event"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-
         <!---EditText: input post title-->
         <EditText
             android:id = "@+id/pTitleEt"
@@ -53,18 +46,7 @@
             android:layout_weight = "1"/>
 
 
-        <EditText
-            android:id = "@+id/pTimeEt"
-            android:padding="10dp"
-            android:hint="Enter title"
-            android:inputType="textCapSentences|textMultiLine"
-            android:minHeight="50dp"
-            android:gravity="start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight = "1"/>
-        </LinearLayout>
-
+    </LinearLayout>
 
         <TextView
             android:id="@+id/locationTagTextView"
@@ -76,6 +58,41 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:orientation="horizontal">
+            <!--Time And Location ET -->
+        <Button
+            android:id="@+id/pTimeSetBtn"
+            android:text="Add Time"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight = "1"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/timeStartTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Starts At: "
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/timeEndTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Ends At: "
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <!---EditText: Input post description-->
         <EditText
@@ -83,7 +100,7 @@
             android:padding="10dp"
             android:hint="Enter Descreption"
             android:inputType="textCapSentences|textMultiLine"
-            android:minHeight="120dp"
+
             android:gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
